--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -176,8 +176,17 @@ p .small{
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
-/* ==== CONTACT === */
+/* ==== CONTACT ===
 .page-contact{
+  font-family: var(--main-font-family);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+} */
+.contact-item a{
     font-family: var(--main-font-family);
     font-style: normal;
     font-weight: 400;
@@ -185,19 +194,27 @@ p .small{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
-}
-.contact-list{
+  }
+  .menu-link a{
+    color: var(--dark);
+    text-decoration:none;
+  }
+  .contact-item a:hover,
+    .contact-item a:focus{
+    color: var(--accent-color-pressed-state);
+  }
+  .contact-list{
     display: flex;
     justify-content: space-between;
-}
-.e-mail{
+  }
+  .e-mail{
     margin-left: auto;
     margin-right: 40px;
-}
-.contact-item:hover,
-.contact-item:focus{
+  }
+  .contact-item:hover,
+  .contact-item:focus{
     color: var(--accent-color-pressed-state);
-}
+  }
 /* ================= MAIN ================= */
 /* ================= SECTION-1 ================= */
 .heder-title{
