--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ p .small{
   color: var(--dark);
 }
 /* ==== LOGO === */
-.logo a{
+.logo {
   font-family: var(--secondary-font-family-family);
   font-style: normal;
   font-weight: 800;
