--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ p .small{
 address{
   font-style: normal;
 }
-.contact-item a{
+.force{
   font-family: var(--main-font-family);
   font-style: normal;
   font-weight: 400;
@@ -212,8 +212,8 @@ address{
   margin-left: auto;
   margin-right: 40px;
 }
-.contact-item:hover,
-.contact-item:focus{
+.force:hover,
+.force:focus{
   color: var(--accent-color-pressed-state);
 }
 /* ================= MAIN ================= */
