--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root{
   --main-font-family: 'Roboto', sans-serif;
   --secondary-font-family-family: 'Raleway', sans-serif;
-  --primary-brand : #4D5AE5;
+  --primary-brand: #4D5AE5;
   --primary-color-white: #ffffff;
   --primary-text-color: #434455;
   --subtle-text: #8E8F99;
@@ -302,3 +302,117 @@ address{
 .footer-descriptions{
   color: var(--light);
 }
+/* ================= PORTFOLIO ================= */
+/* ==== MENU === */
+.page-navigation-menu{
+  display: flex;
+  align-items: center;
+  margin-right: 76px;
+}
+.menu-list{
+  display: flex;
+  column-gap: 40px;
+}
+.menu-link{
+  font-family: var(--main-font-family);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--dark);
+  text-decoration:none;
+}
+.menu-link:hover,
+.menu-link:focus{
+  color: var(--accent-color-pressed-state);
+}
+/* ==== CONTACT ===
+.page-contact{
+  font-family: var(--main-font-family);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}*/
+address{
+  font-style: normal;
+}
+.force{
+  font-family: var(--main-font-family);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+.contact-list{
+  display: flex;
+  justify-content: space-between;
+}
+.e-mail{
+  margin-left: auto;
+  margin-right: 40px;
+}
+.force:hover,
+.force:focus{
+  color: var(--accent-color-pressed-state);
+}
+/* ================= MAIN ================= */
+/* ================= SECTION-1 ================= */
+.heder-title{
+  max-width: 496px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.menu-filter-btn{
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--primary-brand);
+  background-color: var(--light);
+}
+.menu-filter-btn:hover,
+.menu-filter-btn:focus{
+  color: #ffffff;
+  background-color: #404BBF;
+}
+/* ================= SECTION-2 ================= */
+.cards-product-text{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--dark);
+}
+.cards-product-descriptions{
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+/* ================= FOOTER ================= */
+.footer-bg{
+  background-color: #2E2F42;
+}
+.logo-footer{
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-brand);
+}
+.logo-accent-footer{
+  color: #f4f4fd;
+}
+.footer-descriptions p{
+  color: var(--light);
+}
+/* ================= PORTFOLIO ================= */
