--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 }
 .list{
   list-style: none;
-}
+}/*
 h1,
 h2,
 h3,
@@ -31,7 +31,7 @@ ol{
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-}
+}*/
 button{
   cursor: pointer;
 }
