--- a/css/styles.css
+++ b/css/styles.css
@@ -17,21 +17,7 @@
 }
 .list{
   list-style: none;
-}/*
-h1,
-h2,
-h3,
-h4,
-p{
-  margin-top: 0;
-  margin-bottom: 0;
 }
-ul,
-ol{
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-}*/
 button{
   cursor: pointer;
 }
@@ -54,7 +40,6 @@ h1{
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
   color: var(--primary-color-white);
 }
@@ -64,7 +49,6 @@ h2{
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--dark);
@@ -75,7 +59,6 @@ h3{
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-  text-align: center;
   letter-spacing: 0.02em;
   color: var(--dark);
 }
@@ -85,7 +68,6 @@ p{
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  text-align: center;
   letter-spacing: 0.02em;
   color: var(--dark);
 }
@@ -151,16 +133,6 @@ p .small{
 .menu-link:focus{
   color: var(--accent-color-pressed-state);
 }
-/* ==== CONTACT ===
-.page-contact{
-  font-family: var(--main-font-family);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-} */
 address{
   font-style: normal;
 }
@@ -181,7 +153,7 @@ address{
 /* ================= SECTION-1-BANNER ================= */
 .image-bg{
   background-color: var(--dark);
-  background-image: linear-gradient(rgba(47, 46, 66, 70%), rgba(47, 46, 66, 70%)), url(../images/people-office-banner.jpg);
+  background-image: url(../images/people-office-banner.jpg);
   color: white;
 }
 /* ==== BUTTON === */
