--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ h1{
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  text-align: center;
   color: var(--primary-color-white);
 }
 h2{
@@ -51,6 +52,7 @@ h2{
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  text-align: center;
   color: var(--dark);
 }
 h3{
@@ -60,6 +62,7 @@ h3{
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.02em;
+  text-align: center;
   color: var(--dark);
 }
 p{
@@ -164,6 +167,7 @@ address{
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.04em;
+  text-align: center;
   color: var(--primary-color-white);
   background-color: #4D5AE5;
 }
