--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ body{
 }
 h1{
   font-family: var(--main-font-family);
-  font-style: normal;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -46,7 +45,6 @@ h1{
 }
 h2{
   font-family: var(--main-font-family);
-  font-style: normal;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -57,47 +55,38 @@ h2{
 }
 h3{
   font-family: var(--main-font-family);
-  font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
   color: var(--dark);
 }
 p{
   font-family: var(--main-font-family);
-  font-style: normal;
-  font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--dark);
 }
 p .medium{
   font-family: var(--main-font-family);
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--dark);
 }
 p .small{
-  font-family: var(--main-font-family);
-  font-style: normal;
-  font-weight: 400;
+  font-family: var(--main-font-family);;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--dark);
 }
 .link a{
   font-family: var(--main-font-family);
-  font-style: normal;
-  font-weight: 400;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 1.3;
   letter-spacing: 0.04em;
   color: var(--primary-brand);
 }
@@ -127,7 +116,7 @@ p .small{
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--dark);
   text-decoration:none;
@@ -142,7 +131,6 @@ address{
 .force{
   font-family: var(--main-font-family);
   font-style: normal;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -165,7 +153,7 @@ address{
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   text-align: center;
   color: var(--primary-color-white);
@@ -189,6 +177,9 @@ address{
 }
 .card-employee-item{
   background-color: #FFFFFF;
+}
+.card-employee-name{
+  text-align: center;
 }
 .card-employee-descriptions{
   font-size: 16px;
